# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.957 2009/08/18 19:58:05 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.4 (2009/08/??)
 - (2009/08/18) Fixed bug#4049 - SetPermissions.sh fails if .fetchmailrc does
    not exist.
 - (2009/08/18) Added attachment support of ArticleCreate event in event based
    notification feature.
 - (2009/08/18) Fixed bug#4149 - TicketCreate event does not have access to
    Article attributes.
 - (2009/08/18) Fixed bug#4155 - Typo in German translation of
    AdminSystemAddressForm.dtl.
 - (2009/08/17) Fixed bug#3872 - Typo in CustomerFrontend::CommonParam###Action
    issue.
 - (2009/08/17) Fixed bug#4154 - Signature seperator is wrong.
 - (2009/08/14) Fixed bug#4150 - US/English Date Format not available.
 - (2009/08/13) Fixed bug#4092 - Junk tickets shown as New tickets in Dashboard.
 - (2009/08/13) Fixed bug#4129 - Watched Tickets in Dashboard.
 - (2009/08/13) Fixed bug#4072 - Inline images broken in reply with
    ArticleStorageFS as attachment backend.

2.4.3 (2009/08/12)
 - (2009/08/10) Fixed bug#4123 - Reinstall of OPM packages with incorrect
    framework or OS possible.
 - (2009/08/10) Fixed bug#4116 - Error when bouncing welcome ticket.
 - (2009/08/10) Fixed bug#3870 - OTRS utf-8 to iso-8859-1 conversion error
    messages on every incoming mail.
 - (2009/08/05) Fixed bug#4089 - root on OTRS Server gets an e-mail every 10
    minutes (Can't call method "FETCH" on an undefined value at ...Net/LDAP.pm
    line 274)
 - (2009/08/05) Fixed bug#4107 - OpenSearch URL incorrect in Customer
    Interface.
 - (2009/08/03) Improved ChallengeTokenCheck to check all token of own
    sessions (not only of current session).